# open-agent-context

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
conformance/: README.md
conformance/fixtures/: audit_event.json  capability_grant.json  context_capsule.json  context_operation.json  evidence_ref.json  mcp_binding.json  memory_call.json  memory_loop_run.json  memory_operation.json  memory_record.json  protected_ref.json  retrieval_query.json  retrieval_result.json  rule_manifest.json  secret_record.json  sensitive_fact.json  skill_manifest.json  storage_selector.json  tool_binding.json  tool_call_result.json
conformance/negative/: audit_event_bad_hash.json  audit_event_masked_secret.json  audit_event_plaintext_secret.json  capability_grant_depth_overflow.json  capability_grant_glob_scope_without_star.json  context_capsule_bad_checksum.json  context_capsule_masked_protected_value.json  context_capsule_plaintext_protected_value.json  context_operation_completed_without_audit.json  evidence_ref_masked_secret.json  evidence_ref_plaintext_secret.json  mcp_binding_env_plaintext_secret.json  memory_call_unknown_operation.json  memory_loop_run_committed_without_proposed.json  memory_operation_completed_without_audit.json  memory_record_d4_factual_evidence.json  memory_record_d4_low_confidence_evidence.json  memory_record_unknown_attribution_role.json  protected_ref_secret_without_external_locator.json  retrieval_result_d4_used_as_fact.json  rule_manifest_bad_hash.json  skill_manifest_unlinked_required_tool.json  storage_selector_sql_fragment.json  tool_binding_http_network_without_opt_in.json  tool_call_result_masked_secret.json  tool_call_result_plaintext_secret.json  tool_call_result_unknown_attribution_role.json  tool_call_result_unlinked_evidence.json
docs/: AGENT_WORKFLOW.md  API.md  ARCHITECTURE.md  BENCHMARK.md  BUILD.md  COMPATIBILITY.md  CONSUMER_PACKS.md  CONTEXT_CAPSULES.md  DOGFOOD.md  FREEZE_PREP.md  GLOSSARY.md  INTEROPERABILITY.md  MCP_BINDINGS.md  MEMORY_LOOP.md  MEMORY_MODEL.md  PQ_CRYPTO.md  QUICKSTART_PYPI.md  RELEASE.md  ROADMAP.md  RULES.md  SECURITY.md  SKILLS.md  SPEC.md  TOOL_BINDINGS.md  V1_RELEASE_CHECKLIST.md  V1_RELEASE_NOTES.md  VAULT.md
examples/benchmarks/: community_memory_gemma_e2b_2026-05-02.md  (+6 more)
oacs/: __init__.py  app.py  audit.py  conformance.py  evidence.py  vault.py
oacs/api/: server.py  (+4 more)
schemas/: actor.schema.json  audit_event.schema.json  benchmark_task.schema.json  benchmark_task_pack.schema.json  capability_grant.schema.json  context_capsule.schema.json  context_capsule_export.schema.json  context_operation.schema.json  evidence_ref.schema.json  mcp_binding.schema.json  memory_call.schema.json  memory_loop_run.schema.json  memory_operation.schema.json  memory_record.schema.json  protected_ref.schema.json  retrieval_query.schema.json  retrieval_result.schema.json  rule_manifest.schema.json  secret_record.schema.json  sensitive_fact.schema.json  skill_manifest.schema.json  storage_selector.schema.json  tool_binding.schema.json  tool_call_result.schema.json
tests/: conftest.py  integration_test_lmstudio.py  test_api.py  test_benchmark_generator.py  test_benchmark_packs.py  test_capabilities.py  test_cli.py  test_conformance_fixtures.py  test_consumer_pack.py  test_context_capsule.py  test_docs_publication.py  test_encryption.py  test_external_benchmark.py  test_killer_demo.py  test_memory_lifecycle.py  test_memory_loop.py  test_packaging.py  test_repo_proof_loop.py  test_retrieval_contract.py  test_rules.py  test_skills.py  test_storage_backend.py  test_v026_conformance.py  test_v03_adapters.py  test_vault.py
(+75 files in other folders)
