[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "oacs"
version = "0.3.4a1"
description = "Open Agent Context Standard draft reference implementation for governed agent memory and context"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "OACS Contributors" }]
keywords = ["agents", "memory", "context", "ai", "mcp", "sqlite", "fastapi"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Database",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  "cryptography>=42",
  "fastapi>=0.110",
  "httpx>=0.27",
  "jsonschema>=4.21",
  "pydantic>=2.6",
  "rich>=13.7",
  "typer>=0.12",
  "uvicorn>=0.27",
]

[project.optional-dependencies]
crypto = ["argon2-cffi>=23.1"]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.5",
  "mypy>=1.10",
]
pq = ["liboqs-python>=0.10; platform_system != 'Windows'"]
release = [
  "build>=1.2",
  "twine>=5",
]

[project.scripts]
acs = "oacs.cli.main:app"

[project.urls]
Homepage = "https://github.com/mussolene/open-agent-context"
Repository = "https://github.com/mussolene/open-agent-context"
Issues = "https://github.com/mussolene/open-agent-context/issues"
Documentation = "https://github.com/mussolene/open-agent-context/tree/main/docs"
Changelog = "https://github.com/mussolene/open-agent-context/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["oacs"]

[tool.hatch.build.targets.wheel.force-include]
"schemas" = "schemas"
"conformance" = "conformance"

[tool.hatch.build.targets.sdist.force-include]
"schemas" = "schemas"
"conformance" = "conformance"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=oacs --cov-report=term-missing"

[tool.mypy]
python_version = "3.11"
packages = ["oacs"]
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true
strict_optional = true
